add api wsp-icon

--- a/SCSS/_footer.scss
+++ b/SCSS/_footer.scss
@@ -1,7 +1,6 @@
-/* footer */
+// footer
 
 footer {
-  grid-area: footer;
   display: flex;
   background-color: #2dbb44;
   justify-content: center;
