--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,6 @@ nav ul {
   transition: border-color 0.3s, background-color 0.3s, color 0.3s;
 }
 
-/* main */
 .fondo {
   width: 100%;
   margin-bottom: 40px;
@@ -54,6 +53,19 @@ nav ul {
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
+}
+
+.wpp-icon {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 80px;
+  margin: 15px;
+  transition: all 0.5s ease-in-out;
+}
+
+.wpp-icon:hover {
+  transform: scale(1.3);
 }
 
 /* index */
@@ -202,9 +214,7 @@ nav ul {
   margin-top: 5px;
 }
 
-/* footer */
 footer {
-  grid-area: footer;
   display: flex;
   background-color: #2dbb44;
   justify-content: center;
