--- a/SCSS/_carrito.scss
+++ b/SCSS/_carrito.scss
@@ -1,32 +1,35 @@
-/* carrito */
-
 .carrito-pedido {
   width: 43%;
-}
-.producto-carrito {
-  display: flex;
-  align-items: center;
-  box-shadow: 2px 2px 15px 0px rgba(0, 0, 0, 0.25);
-  margin-bottom: 30px;
-}
 
-.img-carrito {
-  box-shadow: 0.3px 0px 0px 0px rgba(0, 0, 0, 0.25);
-  height: 163px;
-  width: 163px;
-  border-radius: 5px;
-}
+  .producto-carrito {
+    display: flex;
+    align-items: center;
+    box-shadow: 2px 2px 15px 0px rgba(0, 0, 0, 0.25);
+    margin-bottom: 30px;
 
-.cont-prod-carr {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 100%;
-}
+    .img-carrito {
+      box-shadow: 0.3px 0px 0px 0px rgba(0, 0, 0, 0.25);
+      height: 163px;
+      width: 163px;
+      border-radius: 5px;
+    }
 
-.button-carrito {
-  padding: 5px;
-  margin: 15px;
+    .cont-prod-carr {
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      width: 100%;
+
+      .button-carrito {
+        padding: 5px;
+        margin: 15px;
+      }
+
+      h3 {
+        padding: 15px;
+      }
+    }
+  }
 }
 
 .resumen {
@@ -36,36 +39,35 @@
   box-shadow: 2px 2px 15px 0px rgba(0, 0, 0, 0.25);
   margin: 0 0 30px 10px;
   align-items: center;
-}
 
-.carrito-pedido h3 {
-  padding: 15px;
-}
+  h3 {
+    padding: 15px;
+  }
 
-.resumen h3 {
-  padding: 15px;
-}
+  .resumen-items {
+    margin-bottom: 210px;
+    width: 100%;
 
-.resumen-prod {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  padding: 5px;
-}
+    .resumen-prod {
+      display: flex;
+      justify-content: space-around;
+      width: 100%;
+      padding: 5px;
+    }
+  }
 
-.resumen-items {
-  margin-bottom: 210px;
-  width: 100%;
-}
+  .subtotal {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-top-style: groove;
+    width: 100%;
 
-.subtotal {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  border-top-style: groove;
-  width: 100%;
-}
-
-.subtotal h4 {
-  margin-top: 5px;
+    h4 {
+      margin-top: 5px;
+    }
+    h5 {
+      text-decoration-line: overlin;
+    }
+  }
 }
