--- a/SCSS/_general.scss
+++ b/SCSS/_general.scss
@@ -3,3 +3,13 @@
   padding: 0;
   font-family: "Roboto", sans-serif;
 }
+
+.logo {
+  border-radius: 50%;
+  height: 90px;
+  margin-top: 15px;
+}
+
+a {
+  text-decoration: none;
+}
