--- a/css/style.css
+++ b/css/style.css
@@ -4,38 +4,40 @@
   font-family: "Roboto", sans-serif;
 }
 
-header {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-
-.navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-}
-
 .logo {
   border-radius: 50%;
   height: 90px;
   margin-top: 15px;
 }
 
-nav ul {
-  display: flex;
+a {
+  text-decoration: none;
 }
 
-.boton {
-  text-decoration: none;
+header {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+header nav {
+  width: 80%;
+}
+header nav .navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+header nav .navbar ul {
+  display: flex;
   list-style-type: none;
+}
+header nav .navbar ul li .boton {
   padding: 10px;
   font-size: 23px;
   color: #2dbb44;
 }
-
-.boton :hover {
+header nav .navbar ul li .boton:hover {
   background-color: #2dbb44;
   color: white;
   border-radius: 5px;
@@ -63,8 +65,7 @@ nav ul {
   margin: 15px;
   transition: all 0.5s ease-in-out;
 }
-
-.wpp-icon:hover {
+.wpp-icon.wpp-icon:hover {
   transform: scale(1.3);
 }
 
@@ -142,35 +143,33 @@ nav ul {
   height: 30px;
 }
 
-/* carrito */
 .carrito-pedido {
   width: 43%;
 }
-
-.producto-carrito {
+.carrito-pedido .producto-carrito {
   display: flex;
   align-items: center;
   box-shadow: 2px 2px 15px 0px rgba(0, 0, 0, 0.25);
   margin-bottom: 30px;
 }
-
-.img-carrito {
+.carrito-pedido .producto-carrito .img-carrito {
   box-shadow: 0.3px 0px 0px 0px rgba(0, 0, 0, 0.25);
   height: 163px;
   width: 163px;
   border-radius: 5px;
 }
-
-.cont-prod-carr {
+.carrito-pedido .producto-carrito .cont-prod-carr {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   width: 100%;
 }
-
-.button-carrito {
+.carrito-pedido .producto-carrito .cont-prod-carr .button-carrito {
   padding: 5px;
   margin: 15px;
+}
+.carrito-pedido .producto-carrito .cont-prod-carr h3 {
+  padding: 15px;
 }
 
 .resumen {
@@ -181,36 +180,27 @@ nav ul {
   margin: 0 0 30px 10px;
   align-items: center;
 }
-
-.carrito-pedido h3 {
-  padding: 15px;
-}
-
 .resumen h3 {
   padding: 15px;
 }
-
-.resumen-prod {
+.resumen .resumen-items {
+  margin-bottom: 210px;
+  width: 100%;
+}
+.resumen .resumen-items .resumen-prod {
   display: flex;
   justify-content: space-around;
   width: 100%;
   padding: 5px;
 }
-
-.resumen-items {
-  margin-bottom: 210px;
-  width: 100%;
-}
-
-.subtotal {
+.resumen .subtotal {
   display: flex;
   justify-content: space-around;
   align-items: center;
   border-top-style: groove;
   width: 100%;
 }
-
-.subtotal h4 {
+.resumen .subtotal h4 {
   margin-top: 5px;
 }
 
@@ -221,25 +211,15 @@ footer {
   height: auto;
   width: 100%;
 }
-
-.footercont {
+footer .footercont {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 80%;
   color: white;
 }
-
-.redes {
+footer .footercont .redes li {
   display: flex;
-}
-
-.redes a {
-  text-decoration: none;
-  color: white;
-}
-
-.redes li {
   padding: 5px;
 }
 
