--- a/SCSS/_mobile.scss
+++ b/SCSS/_mobile.scss
@@ -1,18 +1,12 @@
-/* mobile */
-
 @media (max-width: 768px) {
   .navbar {
     flex-direction: column;
     align-items: center;
-  }
 
-  nav ul {
-    display: flex;
-    text-align: center;
-  }
-
-  .boton {
-    padding: 5px;
+    ul {
+      display: flex;
+      text-align: center;
+    }
   }
 
   .footercont {
@@ -20,68 +14,75 @@
     flex-direction: column;
     text-align: center;
     margin-top: 10px;
+
+    .redes {
+      display: flex;
+    }
   }
 
-  /* index */
+  // index
 
   .ubicacion {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    .local {
+      height: auto;
+      margin-bottom: 20px;
+      width: 100%;
+    }
+
+    iframe {
+      width: 100%;
+      height: 300px;
+    }
   }
-  .local {
-    height: auto;
-    margin-bottom: 20px;
-    width: 100%;
-  }
-  .ubicacion iframe {
-    width: 100%;
-    height: 300px;
-  }
-  /* productos */
+
+  // productos
 
   .productos {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+
+    .card {
+      margin-bottom: 20px;
+    }
   }
 
-  .card {
-    margin-bottom: 20px;
-  }
-
-  /* carrito */
+  // carrito
 
   .main-layout {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
 
-  .carrito-pedido {
-    width: 80%;
-  }
+    .carrito-pedido {
+      width: 80%;
 
-  .producto-carrito {
-    display: flex;
-    flex-direction: column;
-  }
+      .producto-carrito {
+        display: flex;
+        flex-direction: column;
 
-  .img-carrito {
-    margin-top: 15px;
-  }
+        .img-carrito {
+          margin-top: 15px;
+        }
 
-  .cont-prod-carr {
-    display: flex;
-    flex-direction: column;
-  }
+        .cont-prod-carr {
+          display: flex;
+          flex-direction: column;
 
-  .button-carrito {
-    margin: 10px;
-  }
+          .button-carrito {
+            margin: 10px;
+          }
+        }
+      }
+    }
 
-  .resumen {
-    width: 80%;
-    margin: 0 0 30px 0;
+    .resumen {
+      width: 80%;
+      margin: 0 0 30px 0;
+    }
   }
 }
