--- a/css/style.css
+++ b/css/style.css
@@ -1,292 +1,17 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: "Roboto", sans-serif;
-}
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 2 | @import "header";
+ *   |         ^^^^^^^^
+ *   '
+ *   SCSS\style.scss 2:9  root stylesheet */
 
-.logo {
-  border-radius: 50%;
-  height: 90px;
-  margin-top: 15px;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+    "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: Can\'t find stylesheet to import.\a   \2577 \a 2 \2502  @import "header";\d\a   \2502          ^^^^^^^^\a   \2575 \a   SCSS\\style.scss 2:9  root stylesheet';
 }
-
-a {
-  text-decoration: none;
-}
-
-header {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-header nav {
-  width: 80%;
-}
-header nav .navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-}
-header nav .navbar ul {
-  display: flex;
-  list-style-type: none;
-}
-header nav .navbar ul li .boton {
-  padding: 10px;
-  font-size: 23px;
-  color: #2dbb44;
-}
-header nav .navbar ul li .boton:hover {
-  background-color: #2dbb44;
-  color: white;
-  border-radius: 5px;
-  border: none;
-  transition: border-color 0.3s, background-color 0.3s, color 0.3s;
-}
-
-.fondo {
-  width: 100%;
-  margin-bottom: 40px;
-}
-
-.main-layout {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 100%;
-}
-
-.wpp-icon {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  width: 80px;
-  margin: 15px;
-  transition: all 0.5s ease-in-out;
-}
-.wpp-icon.wpp-icon:hover {
-  transform: scale(1.3);
-}
-
-/* index */
-.ubicacion {
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 40px;
-  margin-bottom: 50px;
-  width: 100%;
-}
-
-.local {
-  height: 450px;
-  width: 45%;
-}
-
-/* productos */
-.title {
-  text-align: center;
-  margin-bottom: 30px;
-  width: 100%;
-}
-.title h2 {
-  font-weight: 600;
-  font-size: 22px;
-}
-
-.productos {
-  display: flex;
-  text-align: center;
-  margin-bottom: 30px;
-  width: 80%;
-}
-.productos .card {
-  box-shadow: 2px 2px 15px 0px rgba(0, 0, 0, 0.25);
-  border-radius: 5px;
-  background-color: #2dbb44;
-  margin: 0 10px 20px 0;
-}
-.productos .card img {
-  border-radius: 5px;
-  width: 252px;
-  height: 252px;
-}
-.productos .card .card-info {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 60%;
-  margin: 0 auto;
-}
-.productos .card .card-info h3 {
-  font-size: 20px;
-  font-weight: 400;
-}
-.productos .card .card-info p {
-  font-weight: 300;
-}
-.productos .card .card-info button {
-  background-color: yellow;
-  border-radius: 5px;
-  cursor: pointer;
-  width: 35px;
-  height: 30px;
-}
-
-.carrito-pedido {
-  width: 43%;
-}
-.carrito-pedido .producto-carrito {
-  display: flex;
-  align-items: center;
-  box-shadow: 2px 2px 15px 0px rgba(0, 0, 0, 0.25);
-  margin-bottom: 30px;
-}
-.carrito-pedido .producto-carrito .img-carrito {
-  box-shadow: 0.3px 0px 0px 0px rgba(0, 0, 0, 0.25);
-  height: 163px;
-  width: 163px;
-  border-radius: 5px;
-}
-.carrito-pedido .producto-carrito .cont-prod-carr {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 100%;
-}
-.carrito-pedido .producto-carrito .cont-prod-carr .button-carrito {
-  padding: 5px;
-  margin: 15px;
-}
-.carrito-pedido .producto-carrito .cont-prod-carr h3 {
-  padding: 15px;
-}
-
-.resumen {
-  display: flex;
-  flex-direction: column;
-  width: 37%;
-  box-shadow: 2px 2px 15px 0px rgba(0, 0, 0, 0.25);
-  margin: 0 0 30px 10px;
-  align-items: center;
-}
-.resumen h3 {
-  padding: 15px;
-}
-.resumen .resumen-items {
-  margin-bottom: 210px;
-  width: 100%;
-}
-.resumen .resumen-items .resumen-prod {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  padding: 5px;
-}
-.resumen .subtotal {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  border-top-style: groove;
-  width: 100%;
-}
-.resumen .subtotal h4 {
-  margin-top: 5px;
-}
-
-footer {
-  display: flex;
-  background-color: #2dbb44;
-  justify-content: center;
-  height: auto;
-  width: 100%;
-}
-footer .footercont {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 80%;
-  color: white;
-}
-footer .footercont .redes li {
-  display: flex;
-  padding: 5px;
-}
-
-@media (min-width: 1024px) {
-  .productos {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-}
-/* tablet */
-@media (max-width: 768px) {
-  .navbar {
-    flex-direction: column;
-    align-items: center;
-  }
-  .navbar ul {
-    display: flex;
-    text-align: center;
-  }
-  .footercont {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin-top: 10px;
-  }
-  .footercont .redes {
-    display: flex;
-  }
-  .ubicacion {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .ubicacion .local {
-    height: auto;
-    margin-bottom: 20px;
-    width: 100%;
-  }
-  .ubicacion iframe {
-    width: 100%;
-    height: 300px;
-  }
-  .productos {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  .productos .card {
-    margin-bottom: 20px;
-  }
-  .main-layout {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .main-layout .carrito-pedido {
-    width: 80%;
-  }
-  .main-layout .carrito-pedido .producto-carrito {
-    display: flex;
-    flex-direction: column;
-  }
-  .main-layout .carrito-pedido .producto-carrito .img-carrito {
-    margin-top: 15px;
-  }
-  .main-layout .carrito-pedido .producto-carrito .cont-prod-carr {
-    display: flex;
-    flex-direction: column;
-  }
-  .main-layout .carrito-pedido .producto-carrito .cont-prod-carr .button-carrito {
-    margin: 10px;
-  }
-  .main-layout .resumen {
-    width: 80%;
-    margin: 0 0 30px 0;
-  }
-}
-
-/*# sourceMappingURL=style.css.map */
