add mixins variables and reorganized sass

--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,10 +1,15 @@
-@import "./base/reset";
-@import "./layout/header";
-@import "./layout/main";
-@import "./views/index";
-@import "./views/productos";
-@import "./views/carrito";
-@import "./layout/footer";
-@import "./media-queries/desktop/desktop";
-@import "./media-queries/tablet/tablet";
-@import "./media-queries/mobile/mobile";
+@import "utilities/mixins";
+@import "base/reset";
+@import "layout/header";
+@import "layout/main";
+@import "views/index";
+@import "views/productos";
+@import "views/carrito";
+@import "layout/footer";
+@import "media-queries/desktop/desktop";
+@import "media-queries/tablet/tablet";
+@import "media-queries/mobile/viewsMobile/carritoMobile";
+@import "media-queries/mobile/viewsMobile/indexMobile";
+@import "media-queries/mobile/viewsMobile/productosMobile";
+@import "media-queries/mobile/footerMobile/footerMobile";
+@import "media-queries/mobile/headerMobile/headerMobile";
