--- a/SCSS/views/_productos.scss
+++ b/SCSS/views/_productos.scss
@@ -9,46 +9,96 @@
   }
 }
 
-.productos {
-  display: flex;
-  text-align: center;
-  margin-bottom: 30px;
+.containerFluid {
   width: 80%;
+  display: flex;
 
-  .card {
-    box-shadow: 2px 2px 15px 0px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-    background-color: #2dbb44;
-    margin: 0 10px 20px 0;
+  .categories {
+    width: 20%;
+    height: 290px;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+    margin-right: 15px;
 
-    img {
-      border-radius: 5px;
-      width: 252px;
-      height: 252px;
+    input {
+      margin: 10px 0;
+      padding: 5px;
     }
 
-    .card-info {
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      width: 60%;
-      margin: 0 auto;
+    li {
+      padding: 5px 3px;
+      border-bottom: outset;
+      border-radius: 5px;
+      border-width: 1px;
+      margin-bottom: 5px;
+      width: 85%;
 
-      h3 {
-        font-size: 20px;
-        font-weight: 400;
-      }
-
-      p {
-        font-weight: 300;
-      }
-
-      button {
-        background-color: yellow;
-        border-radius: 5px;
+      &:hover {
+        background-color: #2dbb44;
         cursor: pointer;
-        width: 35px;
-        height: 30px;
+      }
+
+      a {
+        font-size: 16px;
+        font-weight: 400;
+        color: black;
+        text-decoration: none;
+      }
+    }
+  }
+
+  .productos {
+    display: flex;
+    text-align: center;
+    margin-bottom: 30px;
+    width: 80%;
+
+    .card {
+      position: relative;
+      box-shadow: 2px 2px 15px 0px rgba(0, 0, 0, 0.25);
+      border-radius: 5px;
+      height: 252px;
+      margin: 0 10px 20px 0;
+      cursor: pointer;
+
+      &:hover .card-info {
+        opacity: 1;
+      }
+
+      img {
+        border-radius: 5px;
+        width: 252px;
+        height: 252px;
+      }
+
+      .card-info {
+        opacity: 0;
+        position: absolute;
+        top: 210px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+        margin: 0 auto;
+        background-color: #2dbb44;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+
+        h3 {
+          font-size: 20px;
+          font-weight: 400;
+        }
+
+        p {
+          font-weight: 300;
+        }
+
+        button {
+          background-color: yellow;
+          border-radius: 5px;
+          cursor: pointer;
+          width: 35px;
+          height: 30px;
+        }
       }
     }
   }
