--- a/SCSS/media-queries/mobile/viewsMobile/_productosMobile.scss
+++ b/SCSS/media-queries/mobile/viewsMobile/_productosMobile.scss
@@ -1,11 +1,24 @@
 @include mobile {
-  .productos {
+  .containerFluid {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    width: 80%;
+    flex-direction: column;
+    align-items: center;
 
-    .card {
+    .categories {
+      width: 100%;
       margin-bottom: 20px;
+    }
+
+    .productos {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      width: 100%;
+
+      .card {
+        margin-bottom: 20px;
+      }
     }
   }
 }
