--- a/SCSS/views/_productos.scss
+++ b/SCSS/views/_productos.scss
@@ -5,7 +5,7 @@
 
   h2 {
     font-weight: 600;
-    font-size: 22px;
+    font-size: 25px;
   }
 }
 
@@ -20,7 +20,7 @@
     margin-right: 15px;
 
     input {
-      margin: 10px 0;
+      margin: 10px 1px;
       padding: 5px;
     }
 
@@ -61,7 +61,8 @@
       cursor: pointer;
 
       &:hover .card-info {
-        opacity: 1;
+        opacity: 0.7;
+        transition: 1s;
       }
 
       img {
