--- a/SCSS/layout/_header.scss
+++ b/SCSS/layout/_header.scss
@@ -21,13 +21,13 @@ header {
             padding: 10px;
             font-size: 23px;
             color: #2dbb44;
+            transition: all 0.5s ease-in-out;
 
             &:hover {
               background-color: #2dbb44;
               color: #ffff;
               border-radius: 5px;
               border: none;
-              transition: border-color 0.3s, background-color 0.3s, color 0.3s;
             }
           }
         }
