--- a/css/main.css
+++ b/css/main.css
@@ -40,13 +40,13 @@ header nav .navbar ul li .boton {
   padding: 10px;
   font-size: 23px;
   color: #2dbb44;
+  transition: all 0.5s ease-in-out;
 }
 header nav .navbar ul li .boton:hover {
   background-color: #2dbb44;
   color: white;
   border-radius: 5px;
   border: none;
-  transition: border-color 0.3s, background-color 0.3s, color 0.3s;
 }
 
 .fondo {
@@ -110,6 +110,7 @@ header nav .navbar ul li .boton:hover {
 .containerFluid .categories input {
   margin: 10px 1px;
   padding: 5px;
+  border-radius: 5px;
 }
 .containerFluid .categories li {
   padding: 5px 3px;
@@ -144,8 +145,8 @@ header nav .navbar ul li .boton:hover {
   cursor: pointer;
 }
 .containerFluid .productos .card:hover .card-info {
-  opacity: 0.7;
-  transition: 1s;
+  opacity: 0.8;
+  visibility: unset;
 }
 .containerFluid .productos .card img {
   border-radius: 5px;
@@ -153,6 +154,7 @@ header nav .navbar ul li .boton:hover {
   height: 252px;
 }
 .containerFluid .productos .card .card-info {
+  visibility: hidden;
   opacity: 0;
   position: absolute;
   top: 210px;
@@ -164,6 +166,7 @@ header nav .navbar ul li .boton:hover {
   background-color: #2dbb44;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+  transition: opacity 0.4s, visibility 1s ease-in-out;
 }
 .containerFluid .productos .card .card-info h3 {
   font-size: 20px;
