--- a/SCSS/views/_productos.scss
+++ b/SCSS/views/_productos.scss
@@ -77,11 +77,13 @@
         visibility: hidden;
         opacity: 0;
         position: absolute;
-        top: 210px;
+        top: 191px;
         display: flex;
+        flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
         width: 100%;
+        height: 60px;
         margin: 0 auto;
         background-color: #2dbb44;
         border-bottom-left-radius: 5px;
@@ -95,14 +97,16 @@
 
         p {
           font-weight: 300;
+          text-wrap: nowrap;
         }
 
         button {
           background-color: yellow;
           border-radius: 5px;
           cursor: pointer;
-          width: 35px;
-          height: 30px;
+          width: 30px;
+          height: 25px;
+          margin-left: 10px;
         }
       }
     }
