--- a/css/main.css
+++ b/css/main.css
@@ -157,11 +157,13 @@ header nav .navbar ul li .boton:hover {
   visibility: hidden;
   opacity: 0;
   position: absolute;
-  top: 210px;
+  top: 191px;
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
+  height: 60px;
   margin: 0 auto;
   background-color: #2dbb44;
   border-bottom-left-radius: 5px;
@@ -174,13 +176,15 @@ header nav .navbar ul li .boton:hover {
 }
 .containerFluid .productos .card .card-info p {
   font-weight: 300;
+  text-wrap: nowrap;
 }
 .containerFluid .productos .card .card-info button {
   background-color: yellow;
   border-radius: 5px;
   cursor: pointer;
-  width: 35px;
-  height: 30px;
+  width: 30px;
+  height: 25px;
+  margin-left: 10px;
 }
 
 .carrito-pedido {
